docs: add hospital integration documentation (#224)
Add a docs page describing everything related to hospital data system integration with the Opal Application Layer.

Co-authored-by: Napparific <kelly.agnew@mail.mcgill.ca>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,8 @@ nav:
       - Sequence Diagrams: development/guides/sequence_diagrams.md
       - Generate Self Signed Certificates: development/guides/self_signed_certificates.md
   - Deploy:
-    - deploy/index.md
+    - Deploying The Opal Solution: deploy/index.md
+    - Hospital Integration: deploy/integration.md
   - Changelog: changelog.md
 
 # Configuration
