--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,14 +47,16 @@ jobs:
           # use the config file that is stored outside the root for CI specific configuration
           # don't fail step if there are violations
           run: markdownlint-cli2 --config .github/markdownlint/.markdownlint-cli2.yaml "**/*.md" || true
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: markdownlint-cli2-sarif.sarif
-          # Optional category for the results
-          # Used to differentiate multiple results for one commit
-          category: markdownlint
+      # Needs to be a public repo in order for uploading SARIF files to work
+      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github
+      # - name: Upload SARIF file
+      #   uses: github/codeql-action/upload-sarif@v3
+      #   with:
+      #     # Path to SARIF file relative to the root of the repository
+      #     sarif_file: markdownlint-cli2-sarif.sarif
+      #     # Optional category for the results
+      #     # Used to differentiate multiple results for one commit
+      #     category: markdownlint
       # fail if there are markdownlint violations
       - name: Check markdownlint results
         run: |
