--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,12 @@ name: deploy
 on:
   workflow_run:
     workflows: [ci]
-    # branches:
-      # - main
+    branches:
+      - main
     types:
       - completed
   workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: "${{ github.ref }}"
