--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
 
 concurrency:
-  group: "${{ github.ref }}"
+  group: deploy
   cancel-in-progress: true
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
     # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#running-a-workflow-based-on-the-conclusion-of-another-workflow
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
-      contents: read
+      contents: write
     environment: pages
     steps:
       - uses: actions/checkout@v4.2.2
