--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ on:
     types:
       - completed
   workflow_dispatch:
-  pull_request:
 
 concurrency:
   group: deploy
@@ -19,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     # only run if CI workflow completed successfully
     # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#running-a-workflow-based-on-the-conclusion-of-another-workflow
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: write
     environment: pages
