--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           echo "Installed uv version is ${{ steps.setup-uv.outputs.uv-version }}"
           echo "Installed Python version is $(python --version)"
           uv python list
+      - run: alias pip='uv pip'
       - uses: pre-commit/action@v3.0.1
       - name: Run markdownlint
         uses: YannickTeKulve/docker-run-action@0.0.6
