--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,13 @@ jobs:
           # ubuntu-latest already has Python 3.x installed (pip is needed by the pre-commit action)
       - name: Print the installed versions
         run: |
+          uv python install
           echo "Installed uv version is ${{ steps.setup-uv.outputs.uv-version }}"
           echo "Installed Python version is $(python --version)"
           uv python list
-      - uses: pre-commit/action@v3.0.1
+      - uses: mschoettle/pre-commit-action@v4.0.2
+        env:
+          SKIP: markdownlint-cli2
       - name: Run markdownlint
         uses: YannickTeKulve/docker-run-action@0.0.6
         with:
