--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: Copyright (C) 2022 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
+#
+# SPDX-License-Identifier: MIT
+
 mkdocs-material==9.6.4  # https://github.com/squidfunk/mkdocs-material
 mkdocs-git-revision-date-localized-plugin==1.3.0  # https://github.com/timvink/mkdocs-git-revision-date-localized-plugin
 plantuml-markdown==3.11.1  # https://github.com/mikitex70/plantuml-markdown
