--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,29 +38,9 @@ jobs:
       - uses: mschoettle/pre-commit-action@v4.0.2
         env:
           SKIP: markdownlint-cli2
-      - name: Run markdownlint
-        uses: YannickTeKulve/docker-run-action@0.0.6
-        with:
-          image: davidanson/markdownlint-cli2-rules:v0.17.2
-          # node user does not have permissions to workspace due to user id mismatch
-          options: -v ${{ github.workspace }}:/workdir --user root
-          # use the config file that is stored outside the root for CI specific configuration
-          # don't fail step if there are violations
-          run: markdownlint-cli2 --config .github/markdownlint/.markdownlint-cli2.yaml "**/*.md" || true
-      # Needs to be a public repo in order for uploading SARIF files to work
-      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github
-      # - uses: github/codeql-action/upload-sarif@v3
-      #   with:
-      #     # Path to SARIF file relative to the root of the repository
-      #     sarif_file: markdownlint-cli2-sarif.sarif
-      #     # Optional category for the results
-      #     # Used to differentiate multiple results for one commit
-      #     category: markdownlint
-      # fail if there are markdownlint violations
-      - name: Check markdownlint results
-        run: |
-          cat markdownlint-cli2-sarif.sarif | grep -q '"results": \[\]'
 
+  markdownlint:
+    uses: opalmedapps/.github/.github/workflows/markdownlint.yaml@main
 
   build:
     runs-on: ubuntu-latest
