--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,6 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     permissions:
-      # required for upload-sarif action
-      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github#example-workflow-for-sarif-files-generated-outside-of-a-repository
-      security-events: write
       contents: read
     steps:
       - uses: actions/checkout@v4.2.2
@@ -40,6 +37,11 @@ jobs:
           SKIP: markdownlint-cli2
 
   markdownlint:
+    permissions:
+      # required for upload-sarif action
+      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github#example-workflow-for-sarif-files-generated-outside-of-a-repository
+      security-events: write
+
     uses: opalmedapps/.github/.github/workflows/markdownlint.yaml@main
 
   build:
