ci: secure workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,18 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  # push:
+  #   branches:
+  #     - main
+  # pull_request:
+  # merge_group:
+  workflow_call:
   workflow_dispatch:
-  merge_group:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   # don't cancel any workflows on the main branch
-  cancel-in-progress: ${{ github.ref == 'refs/heads/main' }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 permissions:
   contents: read
@@ -21,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
+        with:
+          persist-credentials: false
       - uses: astral-sh/setup-uv@v5.3.1
         id: setup-uv
         with:
@@ -30,7 +33,7 @@ jobs:
       - name: Print the installed versions
         run: |
           uv python install
-          echo "Installed uv version is ${{ steps.setup-uv.outputs.uv-version }}"
+          echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
           uv python list
       - uses: mschoettle/pre-commit-action@v4.0.2
@@ -55,6 +58,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.2
         with:
+          persist-credentials: false
           # fetch the full git history to be able to determine creation dates for pages
           # see: https://github.com/timvink/mkdocs-git-revision-date-localized-plugin?tab=readme-ov-file#note-when-using-build-environments
           fetch-depth: 0
@@ -66,7 +70,7 @@ jobs:
           python-version: 3.13
       - name: Print the installed versions
         run: |
-          echo "Installed uv version is ${{ steps.setup-uv.outputs.uv-version }}"
+          echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
           uv python list
       - name: Install dependencies
