--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,43 @@ repos:
     rev: v0.17.2
     hooks:
       - id: markdownlint-cli2
+
+  # zizmor detects security vulnerabilities in GitHub Actions workflows.
+  - repo: https://github.com/woodruffw/zizmor-pre-commit
+    rev: v1.4.1
+    hooks:
+      - id: zizmor
+
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.31.2
+    hooks:
+      - id: check-github-workflows
+        args: ["--verbose"]
+      - id: check-compose-spec
+        args: ["--verbose"]
+      - id: check-renovate
+        args: ["--verbose"]
+        additional_dependencies: ['json5']
+      # - id: check-jsonschema
+      #   name: "Validate MkDocs file"
+      #   files: ^mkdocs\.ya?ml$
+      #   types: [yaml]
+      #   args: ["--verbose", "--schemafile", "https://squidfunk.github.io/mkdocs-material/schema.json"]
+
+  # `actionlint` hook, for verifying correct syntax in GitHub Actions workflows.
+  # Some additional configuration for `actionlint` can be found in `.github/actionlint.yaml`.
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.7.7
+    language: golang
+    hooks:
+      - id: actionlint
+        # stages:
+          # This hook is disabled by default, since it's quite slow.
+          # To run all hooks *including* this hook, use `uvx pre-commit run -a --hook-stage=manual`.
+          # To run *just* this hook, use `uvx pre-commit run -a actionlint --hook-stage=manual`.
+          # - manual
+        additional_dependencies:
+          # actionlint has a shellcheck integration which extracts shell scripts in `run:` steps from GitHub Actions
+          # and checks these with shellcheck. This is arguably its most useful feature,
+          # but the integration only works if shellcheck is installed
+          - "github.com/wasilibs/go-shellcheck/cmd/shellcheck@v0.10.0"
