--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.ref }}-ci
   # don't cancel any workflows on the main branch
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
