--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,7 +165,7 @@ markdown_extensions:
   - plantuml_markdown:
       server: http://www.plantuml.com/plantuml
       # use caching to speed up live-reloading
-      cachedir: .plantuml/
+      cachedir: .cache/.plantuml/
 
 
 # https://www.mkdocs.org/user-guide/configuration/#validation
