--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,7 @@ jobs:
             mkdocs-material-
       - name: Build site
         run: mkdocs build --strict
+      - run: echo test
 
   deploy:
     uses: ./.github/workflows/deploy.yml
