ci: secure workflows (#242)
Add linting tools for workflows.
Fix violations and secure workflows by removing the workflow_run.
As a result, the ci workflow now calls deploy at the end.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,14 @@ on:
     branches:
       - main
   pull_request:
-  workflow_dispatch:
   merge_group:
+  workflow_call:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   # don't cancel any workflows on the main branch
-  cancel-in-progress: ${{ github.ref == 'refs/heads/main' }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 permissions:
   contents: read
@@ -21,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
+        with:
+          persist-credentials: false
       - uses: astral-sh/setup-uv@v5.3.1
         id: setup-uv
         with:
@@ -30,7 +33,7 @@ jobs:
       - name: Print the installed versions
         run: |
           uv python install
-          echo "Installed uv version is ${{ steps.setup-uv.outputs.uv-version }}"
+          echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
           uv python list
       - uses: mschoettle/pre-commit-action@v4.0.2
@@ -55,6 +58,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.2
         with:
+          persist-credentials: false
           # fetch the full git history to be able to determine creation dates for pages
           # see: https://github.com/timvink/mkdocs-git-revision-date-localized-plugin?tab=readme-ov-file#note-when-using-build-environments
           fetch-depth: 0
@@ -66,17 +70,31 @@ jobs:
           python-version: 3.13
       - name: Print the installed versions
         run: |
-          echo "Installed uv version is ${{ steps.setup-uv.outputs.uv-version }}"
+          echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
           uv python list
       - name: Install dependencies
         run: uv pip install -r requirements.txt
+      # see: https://squidfunk.github.io/mkdocs-material/publishing-your-site/#with-github-actions
+      # weekly cache updates
+      - run: echo "cache_id=$(date --utc '+%V')" >> "$GITHUB_ENV"
       - uses: actions/cache@v4.2.2
         with:
           # weekly cache
-          key: mkdocs-material-$(date --utc '+%V')
+          key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
             mkdocs-material-
       - name: Build site
         run: mkdocs build --strict
+      - run: echo test
+
+  deploy:
+    uses: ./.github/workflows/deploy.yml
+    if: success() && github.ref == 'refs/heads/main'
+    needs:
+      - lint
+      - markdownlint
+      - build
+    permissions:
+      contents: write
