chore: add preset to update dependency versions in workflows

--- a/renovate.json5
+++ b/renovate.json5
@@ -11,6 +11,7 @@
     // see: https://docs.renovatebot.com/modules/manager/pre-commit/
     // https://docs.renovatebot.com/presets-default/#enableprecommit
     ":enablePreCommit",
+    "github>mschoettle/renovate-presets//presets/actions-dependency-version.json5",
   ],
   // https://docs.renovatebot.com/configuration-options/#assignees
   "assignees": ["mschoettle"],
