chore: add project and use uv

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,12 @@ repos:
     hooks:
       - id: markdownlint-cli2
 
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.6.6
+    hooks:
+      - id: uv-lock
+      - id: uv-export
+
   - repo: https://github.com/crate-ci/typos
     rev: v1.30.2
     hooks:
