--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
           uv venv
           echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
+      - name: test
+        run: |
+          uvx pre-commit --version
+          uv run pre-commit --version
       - uses: tox-dev/action-pre-commit-uv@v1.0.2
         env:
           SKIP: markdownlint-cli2
