--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           version: "0.6.6"
       - name: Set up venv for pre-commit
         run: |
-          uv venv
+          uv sync --locked --only-dev
           echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
       - name: test
@@ -71,7 +71,7 @@ jobs:
           version: "0.6.6"
       - name: Install dependencies
         run: |
-          uv sync
+          uv sync --locked
       # see: https://squidfunk.github.io/mkdocs-material/publishing-your-site/#with-github-actions
       # weekly cache updates
       - run: echo "cache_id=$(date --utc '+%V')" >> "$GITHUB_ENV"
