--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,11 @@ jobs:
           version: "0.6.6"
       - name: Set up venv for pre-commit
         run: |
-          uv sync --locked --only-dev
+          # uv sync --locked --only-dev
           echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
       - name: test
         run: |
-          uvx pre-commit --version
           uv run pre-commit --version
       - uses: tox-dev/action-pre-commit-uv@v1.0.2
         env:
