--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,14 @@ jobs:
         with:
           # renovate: datasource=pypi dependency=uv
           version: "0.6.6"
-      - name: Set up venv for pre-commit
+      - name: Install pre-commit
         run: |
           # uv sync --locked --only-dev
           echo "Installed uv version is $(uv --version)"
           echo "Installed Python version is $(python --version)"
       - name: test
         run: |
-          uv run pre-commit --version
+          uv run --no-sync pre-commit --version
       - uses: tox-dev/action-pre-commit-uv@v1.0.2
         env:
           SKIP: markdownlint-cli2
