--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
     rev: 0.6.6
     hooks:
       - id: uv-lock
+      # requirements.txt currently used in Dockerfile to install dependencies
       - id: uv-export
 
   - repo: https://github.com/crate-ci/typos
